--- a/src/ui/feature/subreddit/SubredditAvatar.pug
+++ b/src/ui/feature/subreddit/SubredditAvatar.pug
@@ -28,6 +28,7 @@ style.
 	.subreddit-avatar-image-not-available
 		background var(--c-text-strong)
 	.subreddit-avatar-image-size-large
+		border-radius 10px
 		height 64px
 	.subreddit-avatar-image-size-medium
 		height 32px
