--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -13,19 +13,21 @@
 	font-style normal italic
 	font-weight 100 900
 	src url('../../vendor/inter_100_900.woff2')
+html
+	font-size 14px
 body
 	--f-type-prop 'Inter', sans-serif
 	--f-type-mono 'Roboto Mono', 'Cascadia Mono', 'Consolas', monospace
 	font-family var(--f-type-prop)
 	font-feature-settings 'cv11'
-	font-size 14px
+	font-size 1rem
 	font-weight var(--f-wght-normal)
-	letter-spacing 0.025em
+	letter-spacing 0.444px
 	line-height 1.5
 b
 strong
 	font-weight var(--f-wght-strong)
-	letter-spacing 0.015em
+	letter-spacing 0.266px
 
 // Theme
 body
@@ -67,8 +69,8 @@ body
 p
 	margin 0 0 1em
 hr
-	border 1px solid var(--c-text-weak)
-	margin 0 0 1em
+	border 1px solid var(--c-text-faint)
+	margin 2em 0
 
 // Lists
 ol
@@ -82,12 +84,9 @@ ul
 		list-style-type initial
 		margin 0 0 1em
 		padding-inline-start 3ch
-		p + &
-			margin-top -0.25em
 	li
+	li > *:first-child
 		margin 0.75em 0
-		&:first-child
-			margin-top 0
 menu
 	padding 0
 
@@ -98,20 +97,20 @@ h3
 h4
 h5
 h6
-	font-weight 900
-	letter-spacing 0
+	font-weight var(--f-wght-strong)
 	line-height 1.25
-	margin 1.5em 0 0.75em
+	margin 0 0 1rem
 	&:first-child
 		margin-top 0
 h1
-	font-size 2em
+	font-size 1.6em
+	margin-top 3.2rem
 h2
-	border-bottom 2px solid
-	font-size 1.17em
+	font-size 1.4em
+	margin-top 2.4rem
 h3
-	border-bottom 1px solid
-	font-size 1em
+	font-size 1.2em
+	margin-top 1.6rem
 h4
 h5
 h6
@@ -122,58 +121,75 @@ th
 	font-weight inherit
 .md
 	table
-		background var(--c-con-normal)
-		border 1px solid transparent
-		border-radius 6px
-		display block
-		font-family var(--f-type-mono)
-		font-size 11px
-		letter-spacing 0.5px
+		border 1px solid var(--c-con-strong)
+		border-collapse collapse
+		border-radius 9px
+		display inline-block
+		font-size 12px
+		font-feature-settings 'cv11' 1, 'tnum' 1
+		letter-spacing 0.50px
 		margin 0 0 1em
+		max-width 100%
 		overflow-wrap normal
-		padding 1em
+		padding 1em 0.5em
 		overflow auto
-		&:hover
+		white-space pre-line
+		&:hover:not(:fullscreen)
 			border-color var(--c-hint-normal)
-			cursor pointer
+			cursor zoom-in
+		&:fullscreen
+			background var(--c-theme)
+			border-radius 0
+			color var(--c-text-strong)
+			font-size 14px
+			padding 1.5em
 	th
 	td
-		padding-right 10px
-		padding-top 6px
+		border-right 1px solid var(--c-text-weak)
+		padding 0.5em 1em
 		vertical-align top
+		&:last-child
+			border-right none
 
 // Formatted text
 a
 	color inherit
 	text-decoration none
 address
+cite
 	font-style normal
 sub
 sup
 	line-height 0
 .md
-	background var(--c-blend-normal)
+	background var(--c-con-normal)
 	border-radius 10px
 	overflow-wrap anywhere
-	padding 1em
+	padding 10px 15px
 	a
 		text-decoration underline
-		word-break break-all
-	a[href^='/']::before
-	a[href^='#']::before
-		background var(--c-text-strong)
-		border-radius 50%
-		color var(--c-theme)
-		content '→'
-		display inline
-		font-size 0.9em
-		font-weight 900
-		line-height 1.25
-		margin-left 0.2em
-		margin-right 0.4em
-		padding 0 0.125em
-	a:empty::before
-		display none !important
+		&:hover
+			color var(--c-hint-normal)
+	a[href^='#']
+	a[href^='/']
+		text-decoration none
+		&::before
+			background var(--c-text-strong)
+			border-radius 50%
+			color var(--c-theme)
+			content '→'
+			display inline
+			font-size 0.9em
+			font-style normal
+			font-weight 900
+			line-height 1
+			margin-left 0.1em
+			margin-right 0.5em
+			padding 0 0.1em
+		&:empty::before
+			display none
+		&:hover::before
+			background var(--c-hint-normal)
 	img
 		border 1px solid transparent
 		border-radius 6px
@@ -183,9 +199,9 @@ sup
 // Verbatim text
 blockquote
 	border-left 3px solid var(--c-text-weak)
-	color var(--c-text-weak)
 	font-size 12px
 	margin 0 0 0.5em 2px
+	opacity 0.8
 	padding-left 1em
 code
 pre
@@ -204,9 +220,14 @@ pre
 	margin 0 0 1em
 	padding 1em
 	overflow auto
-	&:hover
+	&:hover:not(:fullscreen)
 		border-color var(--c-hint-normal)
-		cursor pointer
+		cursor zoom-in
+	&:fullscreen
+		background var(--c-theme)
+		color var(--c-text-strong)
+		font inherit
+		padding 2em
 
 // Spoilers
 .md-spoiler-text
