--- a/src/ui/feature/post/PostCommentList.pug
+++ b/src/ui/feature/post/PostCommentList.pug
@@ -32,4 +32,10 @@ ol.post-comments-list
 			PostComment(short_id={reply_short_id} user_batch_id={user_batch_id})
 		{#if post.num_more_replies > 0}
 			.post-more-replies
-				Button(action={() => api.load(post.more_replies_id)} loading={more_replies_loading} text="{post.num_more_replies} {post.num_more_replies === 1 ? 'reply' : 'replies'}")
+				Button(action={() => api.load(post.more_replies_id)} icon_plus={true} loading={more_replies_loading} text="{post.num_more_replies} {post.num_more_replies === 1 ? 'reply' : 'replies'}")
+
+style.
+	.post-comments-list
+		margin 0.5em 0
+	.post-more-replies
+		padding 0.25em 0
