--- a/src/ui/feature/post/PostInfoCard.pug
+++ b/src/ui/feature/post/PostInfoCard.pug
@@ -12,6 +12,7 @@ script.
 	import PostTag from './PostTag.pug'
 
 	export post_short_id = null
+	export selected = false
 	export show_subreddit = false
 	
 	post = null
@@ -26,7 +27,7 @@ script.
 	)
 
 {#if post}
-	a.post-info-card(class:post-read={localStorage['visited.' + post_short_id] || false} class:post-stickied={post.stickied} href='/{post.subreddit}/{post_short_id}')
+	a.post-info-card(class:post-downvoted={post.likes === false} class:post-read={localStorage['visited.' + post_short_id] || false} class:post-selected={selected} class:post-stickied={post.stickied} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1} data-likes={post.likes} data-radial-menu='post' data-short_id={post_short_id} href='/{post.subreddit}/{post_short_id}')
 		.meta
 			{#if show_subreddit}
 				SubredditTag(name={post.subreddit})
@@ -64,14 +65,22 @@ style.
 		gap 6px
 	.post-info-card
 		align-items flex-start
-		background var(--c-blend-normal)
+		border 1px solid transparent
 		border-radius 10px
 		display flex
 		flex-flow column nowrap
 		gap 10px
-		padding 20px
+		max-width 390px
+		padding 1em
 		&:hover
 			background var(--c-con-normal)
+			border-color var(--c-hint-normal)
+		&.post-downvoted
+			border 1px solid cornflowerblue
+		&.post-upvoted
+			border 1px solid orangered
+		&.post-with-low-score .post-title
+			opacity 0.5
 	.post-metadata
 		align-items center
 		align-self stretch
@@ -91,5 +100,3 @@ style.
 		letter-spacing 0
 		line-height 1.25
 		overflow-wrap anywhere
-	:global(.post-read .post-title)
-		font-weight normal
