--- a/src/ui/feature/subreddit/SubredditRules.pug
+++ b/src/ui/feature/subreddit/SubredditRules.pug
@@ -27,7 +27,7 @@ style.
 	.subreddit-rule-description
 		border-left 1px solid var(--c-text-weak)
 		font-size 12px
-		letter-spacing 0.03em
+		letter-spacing 0.50px
 		margin 1em 22px
 		padding 0 3em
 	.subreddit-rule-number
